# AxionCore

./: ARCHITECTURE_MAP.md  AXION_IDE_COMPLETE_SUMMARY.md  AXION_IDE_DOCUMENTATION.md  AxionCore.h  BOOTNODE_CREATION_COMPLETE.md  BOOTNODE_IMPLEMENTATION_COMPLETE.md  BOOTNODE_INFRASTRUCTURE_GUIDE.md  CMakeLists.txt  COMPLETE_DEPLOYMENT_GUIDE.md  COMPLETE_PROJECT_SUMMARY.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_READY_SUMMARY.md  DEPLOYMENT_STEPS.md  DEPLOYMENT_SUMMARY.md  DETAILED_EXECUTION_PLAN.md  DOCUMENTATION_INDEX.md  FILE_MANAGEMENT_SYSTEM.md  FINAL_IMPLEMENTATION_REPORT.md  GITHUB_PUSH_GUIDE.md  GITHUB_RELEASE_INSTRUCTIONS.md  IDE_TEST_ENVIRONMENT_COMPLETE.md  IMPLEMENTATION_COMPLETE_REPORT.md  INDEX.md  LAUNCH_CHECKLIST.md  LAUNCH_NOW.md  LAUNCH_STRATEGY.md  MASTER_LAUNCH_SUMMARY.md  NODE_SETUP.md  PHASE2_CHECKLIST.md  PHASE2_COMPLETION_CHECKLIST.md  PHASE2_DAY1_SUMMARY.md  PHASE2_EXECUTIVE_SUMMARY.md  PHASE2_FILE_INVENTORY.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHASE2_IMPLEMENTATION_PROGRESS.md  PHASE2_IMPLEMENTATION_READY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  (+62 more)
.github/workflows/: release.yml
axion_contracts/: agric_contract.py
axion_data_9000/: balances.axdb  chain.axdb  identity.axdb
bootnode/: CMakeLists.txt  Dockerfile  README.md  bootnode.conf  bootnode_service.cpp  bootnode_service.hpp  docker-compose.yml  main.cpp  setup.bat  setup.sh
contracts/python/: axion_contract.py
contracts/python/examples/: erc20_token.py
scripts/: run-node.bat  run-node.sh  seed-node.bat  seed-node.sh
tests/: test_avm_v2.cpp  test_axion_ide.cpp  test_python_runtime.cpp
website/: style.css
